# orpheus

./: .env.template  .gitignore  .graphify_analysis.json  .graphify_ast.json  .graphify_cached.json  .graphify_detect.json  .graphify_extract.json  .graphify_labels.json  .graphify_semantic.json  .graphify_semantic_new.json  .graphify_uncached.txt  .graphifyignore  AGENTS.md  C2_methodology_spec.md  C3_data_pipeline_spec.md  CHANGELOG.md  CLAUDE.md  DESIGN.json  DESIGN.md  IMPROVEMENT_SPRINTS.md  LICENSE.md  LLM_CONTEXT.md  PRD.md  PRODUCT.md  QUICK_START.md  README.md  SETUP.md  SPRINTS.md  STATUS.md  T1_taxonomy_v1.md  UI_UPGRADE_TODO.md  __init__.py  ben-rap-x.html  ben-rap-x.summary.json  cleanup_docs.ps1  cleanup_docs_simple.bat  cleanup_final.bat  cleanup_final.ps1  cleanup_final_comprehensive.ps1  cleanup_final_simple.bat  (+14 more)
.claude/: launch.json
01_setup/: export_static_site.py  launch_dashboard.bat  launch_dashboard_simple.bat  requirements.txt  run_analysis.py  test_imports.py  test_setup.py
02_core/: data_processor.py  emotion_analyzer.py  pattern_analyzer.py  visualizer.py
03_interface/: streamlit_app.py  streamlit_app_new.py
05_output/: musical_obsessions.csv  processed_music_data.csv
06_docs/: DOCUMENTATION_INDEX.md  DOCUMENTATION_INDEX_UPDATED.md  PROCESS_FLOWS.md  QUICK_START.md  QUICK_START_FINAL.md  REPOSITORY_STATUS_FINAL.md  USER_GUIDE.md
Front End/: 03_Design_Guidelines.md  05_Technical_Stack.md  06_Component_Architecture.md  COMMISSION.md
assets/: styles.css
audio-features-research/: README.md  api_integration_spec.md  candidate_sources.md  (+5 more)
(+201 files in other folders)
